rename to index

--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
 		<p class="google"><img src="Images/logo.png"></a></p>
 		<div id="barre">
 			<!-- Barre de recherche -->
-			<div id="micro"><img src="Images/micro.png"></div>
+			<form></form>
+			<div id="micro"><a><img src="Images/micro.png"></a></div>
 		</div>
 
 		<div class="recherche">
