--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8">
 	<title>Google</title>
 	<link rel="stylesheet" type="text/css" href="google.css">
+	<link rel="shortcut icon" href="Images/icon-google.png"/>
 </head>
 
 <body>
